feat: Share code reset endpoint
