# docs/swagger.json
@@ -141,9 +141,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/rooms/{roomId}/share-gen": {
+            },
             "patch": {
                 "consumes": [
                     "application/json"
@@ -184,6 +182,66 @@
                         "schema": {
                             "$ref": "#/definitions/room_handler.generateShareCodeResponse"
                         }
+                    },
+                    "403": {
+                        "description": "Trying to generate a code for someone else's room; Invalid X-Account-Id header format",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "404": {
+                        "description": "The room does not exist",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/rooms/{roomId}/share-reset": {
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Rooms"
+                ],
+                "summary": "Reset a code to connect to a room",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "default": "en-US",
+                        "description": "Language preference",
+                        "name": "Produce-Language",
+                        "in": "header"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Account ID",
+                        "name": "X-Account-Id",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Room ID",
+                        "name": "roomId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     },
                     "403": {
                         "description": "Trying to generate a code for someone else's room; Invalid X-Account-Id header format",
